--- a/follow_line/package.xml
+++ b/follow_line/package.xml
@@ -3,8 +3,8 @@
 <package format="3">
   <name>follow_line</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="root@todo.todo">root</maintainer>
+  <description>Package to stay in the center of the road via following a white line with camera data</description>
+  <maintainer email="vz-235166@rwu.de, lm-223994@rwu.de">Vinicius, Leander</maintainer>
   <license>Apache-2.0</license>
 
   <test_depend>ament_copyright</test_depend>
