--- a/enter_tunnel/package.xml
+++ b/enter_tunnel/package.xml
@@ -3,8 +3,8 @@
 <package format="3">
   <name>enter_tunnel</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="root@todo.todo">root</maintainer>
+  <description>Package to enter a tunnel via laser scan data</description>
+  <maintainer email="vz-235166@rwu.de, lm-223994@rwu.de">Vinicius, Leander</maintainer>
   <license>Apache-2.0</license>
 
   <test_depend>ament_copyright</test_depend>
